tests/error/linear_errors/break_unused.err
Error: Drop violation (at $FILE:20:8)
   | 
18 |     b = False
19 |     while True:
20 |         q = new_qubit()
   |         ^ Variable `q` with non-droppable type `qubit` may be leaked
   |           ...
   | 
21 |         if i == 0:
   |            ------ if this expression is `True`

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
